--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body, #root, .App {
+    background-color: cadetblue;
+} 
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,47 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.animals {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    flex-wrap: wrap;
+    background-color: indianred;
+}
+
+.animal{
+    margin-bottom: 3px;
+    
+}
+.animal-buttons{
+    background-color: indianred;
+    padding-bottom: 15px;
+}
+
+.open-sign {
+    font-size: 90px;
+    background-color: palevioletred;
+}
+
+.open-buttons{
+    background-color: palevioletred;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+}
+
+.fight {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    margin:40px;
+    width:90%;
+    
+}
+
+.buttons {
+    margin: 10px;
+    
 }
